--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,5 +2,5 @@ org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
 
-# Google Maps API Key placeholder - will be replaced by actual key
-GOOGLE_MAPS_API_KEY=nacBdt87Xj6ZDTHU3Yaw5XFASEcGaSCL
+# Google Maps API Key - configured for ResQRoute app
+GOOGLE_MAPS_API_KEY=AIzaSyDb3k1AXV_cwvf-Hkron_kddeUM0fUSJdg
